[gd_scene load_steps=37 format=3 uid="uid://bydk83f4ejojd"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_0ahet"]
[ext_resource type="Texture2D" uid="uid://c7nebgulhs50g" path="res://textures/crosshair.png" id="2_dr54d"]
[ext_resource type="Shader" path="res://shaders/vignette.gdshader" id="3_0wimn"]
[ext_resource type="PackedScene" uid="uid://blnoucdsdravt" path="res://models/hand.tscn" id="3_3fy6x"]
[ext_resource type="Material" uid="uid://kwc30h1o1u7" path="res://materials/outlineShader.tres" id="3_6efta"]
[ext_resource type="Shader" path="res://shaders/chromatic_aberration.gdshader" id="4_rtkbb"]
[ext_resource type="Script" path="res://scripts/interaction.gd" id="6_txd6g"]
[ext_resource type="Script" path="res://scripts/groundSurfaceChecker.gd" id="8_17srg"]
[ext_resource type="AudioStream" uid="uid://cnglkq2gc67g5" path="res://SFX/SFX_walk_herbe.mp3" id="9_o7fi3"]
[ext_resource type="AudioStream" uid="uid://dnn5ar25iqbg1" path="res://SFX/SFX_walk_plastique.mp3" id="10_a0w3r"]
[ext_resource type="AudioStream" uid="uid://b0ff83trfj6ma" path="res://SFX/SFX_walk_cailloux.mp3" id="11_vniyt"]
[ext_resource type="AudioStream" uid="uid://55gktknbnwhe" path="res://SFX/SFX_walk_metal.mp3" id="12_tgg8t"]
[ext_resource type="AudioStream" uid="uid://b34hyevadbidx" path="res://SFX/SFX_glitch_slowmo1.mp3" id="13_bvsim"]
[ext_resource type="AudioStream" uid="uid://f60ur6f0x6f0" path="res://SFX/SFX_glitch_slowmo2.mp3" id="14_jlt7n"]
[ext_resource type="AudioStream" uid="uid://cy3ooounvkhym" path="res://SFX/SFX_throw.mp3" id="15_0383t"]
[ext_resource type="AudioStream" uid="uid://bocv42e1tkd14" path="res://SFX/SFX_heartbeat.mp3" id="15_j55q4"]
[ext_resource type="AudioStream" uid="uid://cq5ka3gk4jqow" path="res://SFX/SFX_gant_no.mp3" id="16_3nylq"]
[ext_resource type="AudioStream" uid="uid://bk8wgm1fk41yv" path="res://SFX/SFX_gant_up.mp3" id="18_4yfp0"]
[ext_resource type="AudioStream" uid="uid://c6hkox7hayugs" path="res://SFX/SFX_gant_down.mp3" id="19_rjgdr"]
[ext_resource type="PackedScene" uid="uid://cadaxqm72dhf3" path="res://scenes/menu_pause.tscn" id="20_pbv1f"]
[ext_resource type="AudioStream" uid="uid://cy3f4fvcqycis" path="res://SFX/SFX_gant_cubegun.mp3" id="20_s3hfh"]
[ext_resource type="PackedScene" uid="uid://c3s2peoyfyysb" path="res://scenes/menu_dead.tscn" id="23_m7dcq"]
[ext_resource type="PackedScene" uid="uid://drcydu50giwch" path="res://scenes/menu_end.tscn" id="23_po130"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_enxdf"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_d02xy"]
shader = ExtResource("3_0wimn")
shader_parameter/vignette_intensity = 0.0
shader_parameter/vignette_opacity = 0.5
shader_parameter/vignette_rgb = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_adous"]
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("vignette:material:shader_parameter/vignette_intensity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_thelt"]
resource_name = "vignette_come"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("vignette:material:shader_parameter/vignette_intensity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_1jhig"]
resource_name = "vignette_return"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("vignette:material:shader_parameter/vignette_intensity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u67po"]
_data = {
"RESET": SubResource("Animation_adous"),
"vignette_come": SubResource("Animation_thelt"),
"vignette_return": SubResource("Animation_1jhig")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_muv1s"]
shader = ExtResource("4_rtkbb")
shader_parameter/r_displacement = Vector2(1, 0)
shader_parameter/g_displacement = Vector2(0, 0)
shader_parameter/b_displacement = Vector2(-1, 0)

[sub_resource type="QuadMesh" id="QuadMesh_7ixxa"]
material = ExtResource("3_6efta")
flip_faces = true
size = Vector2(2, 2)

[sub_resource type="Animation" id="Animation_n4qr4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head/Bras/hand:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -3.14159, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head/Bras/hand:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.185, 0.185, -0.9)]
}

[sub_resource type="Animation" id="Animation_876in"]
resource_name = "cube_gun"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head/Bras/hand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-0.185, 0.185, -0.9), Vector3(-0.185, 0.185, -0.57), Vector3(-0.185, 0.185, -0.9)]
}

[sub_resource type="Animation" id="Animation_g28p3"]
resource_name = "thumbDown"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head/Bras/hand:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, -3.14159, 0), Vector3(0, -3.14159, -1.21649), Vector3(0, -3.14159, -1.21649), Vector3(0, -3.14159, 0)]
}

[sub_resource type="Animation" id="Animation_2oiss"]
resource_name = "thumbUp"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head/Bras/hand:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, -3.14159, 0), Vector3(0, -3.14159, 1.95128), Vector3(0, -3.14159, 1.95128), Vector3(0, -3.14159, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k3ick"]
_data = {
"RESET": SubResource("Animation_n4qr4"),
"cube_gun": SubResource("Animation_876in"),
"thumbDown": SubResource("Animation_g28p3"),
"thumbUp": SubResource("Animation_2oiss")
}

[node name="Player" type="CharacterBody3D" groups=["Player"]]
process_mode = 1
collision_mask = 14
script = ExtResource("1_0ahet")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_enxdf")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.590008, 0)

[node name="Camera" type="Camera3D" parent="Head"]
cull_mask = 1048573
near = 0.001

[node name="crosshair" type="TextureRect" parent="Head/Camera"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_dr54d")
stretch_mode = 3

[node name="vignette" type="ColorRect" parent="Head/Camera"]
material = SubResource("ShaderMaterial_d02xy")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="vignette_anim" type="AnimationPlayer" parent="Head/Camera"]
autoplay = "RESET"
libraries = {
"": SubResource("AnimationLibrary_u67po")
}

[node name="chromatic_ab" type="ColorRect" parent="Head/Camera"]
visible = false
material = SubResource("ShaderMaterial_muv1s")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Shader" type="MeshInstance3D" parent="Head/Camera"]
mesh = SubResource("QuadMesh_7ixxa")

[node name="RayCast" type="RayCast3D" parent="Head/Camera"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
target_position = Vector3(0, -50, 0)
collision_mask = 14

[node name="SubViewportContainer" type="SubViewportContainer" parent="Head/Camera"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="Head/Camera/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="GunCam" type="Camera3D" parent="Head/Camera/SubViewportContainer/SubViewport"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.590008, 0)
cull_mask = 1047554
fov = 50.0
near = 0.001

[node name="vignette2" type="ColorRect" parent="Head/Camera/SubViewportContainer/SubViewport/GunCam"]
material = SubResource("ShaderMaterial_d02xy")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Shader2" type="MeshInstance3D" parent="Head/Camera/SubViewportContainer/SubViewport/GunCam"]
layers = 2
mesh = SubResource("QuadMesh_7ixxa")
skeleton = NodePath("../../../..")

[node name="Interaction" type="Node3D" parent="Head/Camera"]
script = ExtResource("6_txd6g")

[node name="interaction" type="RayCast3D" parent="Head/Camera/Interaction"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
target_position = Vector3(0, -4, 0)
collision_mask = 10
debug_shape_custom_color = Color(1, 0, 0, 1)
debug_shape_thickness = 4

[node name="hand" type="Marker3D" parent="Head/Camera/Interaction"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2)

[node name="Bras" type="Node3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, -0.66, -1)

[node name="hand" parent="Head/Bras" instance=ExtResource("3_3fy6x")]
transform = Transform3D(-0.1, 0, -2.53518e-07, 0, 0.1, 0, 2.53518e-07, 0, -0.1, -0.185, 0.185, -0.9)

[node name="muzzle" type="Node3D" parent="Head/Bras"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.2, 0.2, -0.6)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "RESET"
libraries = {
"": SubResource("AnimationLibrary_k3ick")
}

[node name="groundSurfaceChecker" type="RayCast3D" parent="."]
target_position = Vector3(0, -1.2, 0)
collision_mask = 10
debug_shape_custom_color = Color(1, 1, 0, 1)
debug_shape_thickness = 5
script = ExtResource("8_17srg")

[node name="walk_SFX_herbe" type="AudioStreamPlayer3D" parent="groundSurfaceChecker"]
stream = ExtResource("9_o7fi3")
bus = &"Sound"

[node name="walk_SFX_plastique" type="AudioStreamPlayer3D" parent="groundSurfaceChecker"]
stream = ExtResource("10_a0w3r")
volume_db = -12.0
bus = &"Sound"

[node name="walk_SFX_cailloux" type="AudioStreamPlayer3D" parent="groundSurfaceChecker"]
stream = ExtResource("11_vniyt")
bus = &"Sound"

[node name="walk_SFX_metal" type="AudioStreamPlayer3D" parent="groundSurfaceChecker"]
stream = ExtResource("12_tgg8t")
bus = &"Sound"

[node name="SFX" type="Node3D" parent="."]

[node name="slowmoSFX1" type="AudioStreamPlayer3D" parent="SFX"]
stream = ExtResource("13_bvsim")
bus = &"Sound"

[node name="slowmoSFX2" type="AudioStreamPlayer3D" parent="SFX"]
stream = ExtResource("14_jlt7n")
bus = &"Sound"

[node name="slowmoSFXheartbeat" type="AudioStreamPlayer3D" parent="SFX"]
stream = ExtResource("15_j55q4")
bus = &"Sound"

[node name="throwSFX" type="AudioStreamPlayer3D" parent="SFX"]
stream = ExtResource("15_0383t")
volume_db = -3.0
pitch_scale = 1.5
bus = &"Sound"

[node name="gantNoSFX" type="AudioStreamPlayer3D" parent="SFX"]
stream = ExtResource("16_3nylq")
volume_db = -10.0
pitch_scale = 1.5
bus = &"Sound"

[node name="gantSFX1" type="AudioStreamPlayer3D" parent="SFX"]
stream = ExtResource("18_4yfp0")
volume_db = -8.0
bus = &"Sound"

[node name="gantSFX2" type="AudioStreamPlayer3D" parent="SFX"]
stream = ExtResource("19_rjgdr")
volume_db = -8.0
bus = &"Sound"

[node name="cubegun" type="AudioStreamPlayer3D" parent="SFX"]
stream = ExtResource("20_s3hfh")
volume_db = -4.0
bus = &"Sound"

[node name="menu_pause" parent="." instance=ExtResource("20_pbv1f")]

[node name="menu_dead" parent="." instance=ExtResource("23_m7dcq")]

[node name="menu_end" parent="." instance=ExtResource("23_po130")]
